--- a/Documentation/Kevin's Code/index.html
+++ b/Documentation/Kevin's Code/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <aside class="sidebar">
-            <h1>K3 Scoreboard Documentation</h1>
+            <h1>Prev K3 Scoreboard Documentation (old code)</h1>
             <input type="text" id="searchBar" class="search-bar" placeholder="Search...">
             <nav>
                 <ul>
@@ -25,7 +25,7 @@
         <main class="content">
             <section id="introduction">
                 <h2>Introduction</h2>
-                <p>This documentation provides a general overview of the project and how the codee works.</p>
+                <p>This documentation provides a general overview of the project and how the code works.</p>
             </section>
 
             <!-- <section id="files">
